# fantazy

./: .env.example  CHANGELOG.md  CLAUDE_CLI_ROOT_CAUSE_FIX.md  CORE_SDK_AUDIT_AND_REFACTOR.md  README.md  SDK_SKILL_TOOL_INVESTIGATION.md  WORK_RECIPES_COMPLETE_SUMMARY.md  pyproject.toml  render.yaml
docs/: CALIBRATION_SPRINT_REPORT.md  CLEARINGHOUSE_INFRASTRUCTURE.md  CONTENT_ARCHITECTURE_CANON.md  DATABASE_ACCESS.md  DATA_ARCHITECTURE_IMPLEMENTATION.md  DIRECTOR_ARCHITECTURE.md  DOMAIN_MODEL.md  EP-01_pivot_CANON.md  EPISODE-0_CANON.md  EPISODES_CANON_PHILOSOPHY.md  EPISODE_DYNAMICS_CANON.md  FANTAZY_CANON.md  GLOSSARY.md  MIGRATION_CHECKLIST.md  SCHEMA_SNAPSHOT.sql  SQL_EXECUTION_GUIDE.md  STRATEGY_DEMO_SALES_TOOL.md  STUDIO.md  dump_schema.sh
docs/architecture/: ADR_CONTEXT_ENTRIES.md  ADR_UNIFIED_WORK_ORCHESTRATION.md  LLM_CONVERSATION_FLOW.md  SKILLS_ARCHITECTURE_INVESTIGATION.md  WORK_ORCHESTRATION_COMPREHENSIVE_DESIGN.md
docs/canon/: SUBSTRATE_DATA_TYPES.md
docs/character-philosophy/: AVATAR_IMAGE_GEN_CONSIDERATION.md  AVATAR_MANAGEMENT_DOMAIN.md  CHARACTER_VISUALIZATION_COST_CONSIDERATION.md
docs/content/: CONTENT_ARCHITECTURE_CANON.md  EPISODE_QUALITY_ASSESSMENT.md  EPISODE_SYSTEM.md  IMAGE_STRATEGY.md
docs/decisions/: ADR-001-genre-architecture.md  ADR-002-theatrical-architecture.md  ADR-003-image-generation-strategy.md  ADR-005-props-domain.md  ADR-006-props-progression-system.md  ADR-008-user-objectives-system.md
docs/deployment/: PHASE_SDK_REMOVAL_IMPLEMENTATION.md  PHASE_SDK_REMOVAL_PIVOT.md
docs/features/: TODO_WRITE_IMPLEMENTATION.md
docs/fixes/: MIGRATION_APPLIED_SUCCESS_2025_11_24.md
docs/implementation/: ADMIN_DASHBOARD.md  CONTEXT_ENTRIES_IMPLEMENTATION_PLAN.md  CONTEXT_PAGE_REFACTOR_PLAN.md  DIRECTOR_PHASE2_MEMORY_OWNERSHIP.md  DIRECTOR_PHASE_2_4_VISUAL_OBSERVABILITY.md  DIRECTOR_REFACTORING.md  EP-01_EPISODE_FIRST_IMPLEMENTATION.md  GEMINI_CONTENT_AGENT_PLAN.md  IMPLEMENTATION_PLAN.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE_2_2_VISUAL_SCENES.md  PHASE_2_PROMPTING_STICKINESS.md  (+8 more)
scripts/: add_episode0_role_constraint.sql  assign_remaining_roles.sql  check_episode_health.sql  dump_schema.sh  setup_avatars_kai_sora.sh  setup_test_avatar.sh  test_avatar_kit.py
web/: package-lock.json  package.json
work-platform/: AUTH_PATTERNS_AUDIT.md
(+452 files in other folders)
