[project]
name = "clearinghouse"
version = "0.1.0"
description = "IP Licensing Infrastructure for the AI Era"
readme = "README.md"
requires-python = ">=3.11,<4.0"
license = "MIT"

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10,<3",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "asyncpg>=0.29.0",
    "databases>=0.9.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
]

classifiers = [
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage   = "https://github.com/Kvkthecreator/clearinghouse"
Repository = "https://github.com/Kvkthecreator/clearinghouse"

# -----------------------------------------------------------------
# Dev / tooling
# -----------------------------------------------------------------
[dependency-groups]
dev = [
    "mypy",
    "ruff>=0.9.0",
    "pytest",
    "pytest-asyncio",
]

# -----------------------------------------------------------------
# Build configuration
# -----------------------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["substrate-api/api/src/app"]

# -----------------------------------------------------------------
# Tool configs
# -----------------------------------------------------------------
[tool.ruff]
line-length     = 100
target-version  = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
isort  = { combine-as-imports = true, known-first-party = ["app"] }

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict                      = true
disallow_incomplete_defs    = false
disallow_untyped_defs       = false
disallow_untyped_calls      = false

[tool.pytest.ini_options]
asyncio_mode                       = "auto"
asyncio_default_fixture_loop_scope = "session"
